HSEARCH-5300 More cleanups and improvements